--- a/public/imageloader.html
+++ b/public/imageloader.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=10.0"> 
 <script  type="text/javascript">
 window.onload = loadPhoto;
 
